Presentación: Saco tilde de mi nombre

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -45,8 +45,8 @@
 \title[Verificación de smart contracts en Marlowe]% (optional, use only with long paper titles)
 {Verificación de smart contracts en Marlowe para la blockchain Cardano}
 
-\author[Julián Ferres] % (optional, use only with lots of authors)
-{~Julián Ferres}
+\author[Julian Ferres] % (optional, use only with lots of authors)
+{~Julian Ferres}
 % - Give the names in the same order as the appear in the paper.
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
