Presentacion: Fix de algunas imagenes

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -559,12 +559,22 @@ A grandes rasgos, la estructura del generador de contratos ACTUS tiene los sigui
 
 {\nologo
 \begin{frame}[fragile]
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{ACTUS_Taxonomy_hl.png}
-    \caption{Contratos que implementé como parte del desarrollo de mi tesis}
-\end{figure}
+\only<1>{
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{ACTUS_Taxonomy.png}
+        \caption{Taxonomía ACTUS}
+    \end{figure}
+\vspace{0.70mm} 
+}
 
+\only<2>{
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{ACTUS_Taxonomy_hl.png}
+        \caption{Contratos que implementé como parte del desarrollo de mi tesis}
+    \end{figure}
+}
 \end{frame}
 }
 
