Dejo fija la fecha en 19 de agosto y saco una mayúscula

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -55,7 +55,7 @@
   %\inst{1}
   Facultad de Ingeniería\\Universidad de Buenos Aires.
 }
-\date{\today}
+\date{19 de Agosto de 2022}
 
 % Acá se puede insertar el logo de la UBA
 \pgfdeclareimage[height=0.6cm]{fiuba}{images/FIUBA_Logo.png}
@@ -529,7 +529,7 @@ A grandes rasgos, la estructura del generador de contratos ACTUS tiene los sigui
 
         \medskip
 
-        En este módulo podemos encontrar los tipos de \textbf{eventos}, \textbf{términos} y el \textbf{Estado} del contrato, entre otros.
+        En este módulo podemos encontrar los tipos de \textbf{eventos}, \textbf{términos} y el \textbf{estado} del contrato, entre otros.
         \pause
         \vfill
 
