Presentacion: Saco frame de introducción innecesario

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -259,26 +259,26 @@ Combina las propiedades de las generaciones anteriores y ofrece las siguientes p
 \end{frame}
 
 
-\begin{frame}{Ada como criptomoneda de Cardano}
-Ada es la moneda nativa o principal en Cardano. Esto significa que ada es la principal unidad de pago.
+%\begin{frame}{Ada como criptomoneda de Cardano}
+%Ada es la moneda nativa o principal en Cardano. Esto significa que ada es la principal unidad de pago.
 
-\pause
-\vfill
+%\pause
+%\vfill
 
-Sin embargo, también admite la creación de \textbf{tokens nativos}: activos digitales que se crean para fines
-específicos. 
+%Sin embargo, también admite la creación de \textbf{tokens nativos}: activos digitales que se crean para fines
+%específicos. 
 
-\vfill
-\pause
+%\vfill
+%\pause
 
-Esto permite a los usuarios, desarrolladores y empresas usar a Cardano para crear tokens que representen valor.
+%Esto permite a los usuarios, desarrolladores y empresas usar a Cardano para crear tokens que representen valor.
 
-\pause
-\vfill
+%\pause
+%\vfill
 
-Un token puede ser \textbf{fungible} (intercambiable) o \textbf{no fungible} (único) y actuar como unidad de pago, recompensa, activo comercial o contenedor de información.
+%Un token puede ser \textbf{fungible} (intercambiable) o \textbf{no fungible} (único) y actuar como unidad de pago, recompensa, activo comercial o contenedor de información.
 
-\end{frame}
+%\end{frame}
 
 \begin{frame}{El lenguaje Marlowe}
     Marlowe es un lenguaje de dominio específico creado por IOHK. El mismo posee \textbf{pocas sentencias que describen el comportamiento de un conjunto fijo y finito de roles en un contrato}.
@@ -387,7 +387,7 @@ Cuando un teorema es escrito y probado, el mismo debe será verdadero para cualq
 \vfill
 \pause
 
-La principal fortaleza de los asistentes es que ayudan a desarrollar \textbf{pruebas altamente confiables e inequívocas} de enunciados matemáticos y algoritmos, usando lógica precisa.
+La principal fortaleza de los asistentes es que ayudan a desarrollar \textbf{pruebas altamente confiables} de enunciados matemáticos y algoritmos, usando lógica precisa.
 \end{frame}
 
 \begin{frame}{Algunos asistentes de pruebas}
